Revision history for Database-Abstraction

0.08
	Add unique as a synomym of distinct

0.07	Fri Feb 23 08:02:24 EST 2024
	selectall_hash: Fixed "Not an ARRAY reference"

0.06	Tue Feb 20 16:55:33 EST 2024
	Slurped data - improve keying
	fetchrow_hashref now uses slurped data on some optimised places
	fetchrow_hashref: fixed uninitialized variable in logger
	fetchrow_hashref: more verbose debugging on match
	AUTOLOAD: usage error if entry isn't a column
	AUTOLOAD: fix problem when no args are given on slurped data

0.05	Fri Feb  9 11:01:00 EST 2024
	Fix https://www.cpantesters.org/cpan/report/f07e90f2-c264-11ee-bb2d-64236e8775ea
	init() will now return the current defaults
	Ensure that the default cache_duration is 1 hour

0.04	Fri Feb  2 13:14:18 EST 2024
	init() can now be called more than once and will retain the old values
	Added XML test
	Restrict the size of the CSV file that are slurped to 16K

0.03	Thu Feb  1 13:48:01 EST 2024
	Complain if the directory argument isn't a directory
	Put the values from init() into a hash
	Remove Database::Abstraction::Error - it's an artifact
		It was a good idea, but Error doesn't play well with 'use lib'

0.02	Tue 30 Jan 11:07:12 EST 2024
	Simpler package name used for testing
	Fix the Error objection being thrown

0.01    Mon Jan 29 14:02:37 EST 2024
        First draft